# robotx_joy_control

./: CMakeLists.txt  package.xml
config/: dualshock4.yaml
include/: joyvel_converter.hpp
include/robotx_joy_control/: robotx_joy_control.hpp
include/vrx_joystick/: joy_operator.hpp  joyvel_converter.hpp
launch/: robotx_joy_control.launch
src/: joy_operator.cpp  joy_operator_node.cpp  joyvel_converter.cpp  joyvel_converter_node.cpp  joyvel_converter_node.cpp~  robotx_joy_control.cpp  robotx_joy_control_node.cpp
