<?xml version="1.0"?>
<package format="2">
  <name>robotx_joy_control</name>
  <version>0.1.0</version>
  <description>The robotx_joy_control package</description>

  <maintainer email="robotx@osakaweb.jp">JadeEtoile</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>usv_control_msgs</build_depend>
  <build_depend>rostate_machine</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>usv_control_msgs</build_export_depend>
  <build_export_depend>rostate_machine</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>usv_control_msgs</exec_depend>
  <exec_depend>rostate_machine</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
